# pyqt6-base

./: CHANGELOG.md  LICENSE.md  README.md  install.sh  qtcreator.sh  requirements.txt  setup.cfg  setup.py  source.sh  test.sh  tox.ini
.github/workflows/: tests.yml
cli/: pyqt6_cli
scripts/: create_env.sh  install_dep.sh  install_package.sh
src/pyqt6_base/: __init__.py  lib.py
tests/: test_pyqt6_base.py
