[metadata]
name = pyqt6_base
version = attr: pyqt6_base.__version__
author = HorusElohim
author_email = horuselohim@gmail.com
description = PyQt6 Template Python Package
url =
long_description = file: README.md, CHANGELOG.md, LICENSE.md
license = Akka and Renault
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9




[options]
zip_safe = False
packages = find_namespace:
scripts =
    cli/pyqt6_cli
python_requires = >=3.8
include_package_data = True
package_dir= =src


# Here the python package required
# Same as requirements.txt
install_requires =
    wheel
    pyyaml
    pyside6
    pyqt6-tools
    GitPython
    rsa

[options.packages.find]
where = src
exclude = tests

# Console scripts
# [options.entry_points]
# console_scripts = ad_diagnostic = ad_diagnostic.start_app:main


[build-system]
requires = ["setuptools", "wheel"]


[option.extras_require]
testing =
    flake8
    tox
    pytest
    pytest-cov
    mypy


[option.package_data]
pyqt6_base = py.typed


[pytest.init_option]
addopts = "--cov=pyqt6-base"
testpaths = 'tests'

# PEP8 checking via flake8 is configured in .flake8
[flake8]
max-line-length = 160
exclude = .git,__pycache__,doc/,docs/,build/,dist/,archive/
per-file-ignores = __init__.py:F401


[mypy]
mypy_path = 'src'
check_untyped_defs = true
no_implicit_optional = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true